tests/snapshots/opendbc/generator/honda/_nidec_scm_group_b.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 662
    name: SCM_BUTTONS
    size: 4
    transmitter:
      NodeName: SCM
    signals:
      - name: CRUISE_BUTTONS
        multiplexer_indicator: Plain
        start_bit: 7
        size: 3
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 7
        unit: ""
        receivers:
          - EON
      - name: CRUISE_SETTING
        multiplexer_indicator: Plain
        start_bit: 3
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 27
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 29
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
  - id:
      Standard: 806
    name: SCM_FEEDBACK
    size: 8
    transmitter:
      NodeName: SCM
    signals:
      - name: DRIVERS_DOOR_OPEN
        multiplexer_indicator: Plain
        start_bit: 17
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: REVERSE_LIGHT
        multiplexer_indicator: Plain
        start_bit: 18
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: CMBS_BUTTON
        multiplexer_indicator: Plain
        start_bit: 22
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: LEFT_BLINKER
        multiplexer_indicator: Plain
        start_bit: 26
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: RIGHT_BLINKER
        multiplexer_indicator: Plain
        start_bit: 27
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: MAIN_ON
        multiplexer_indicator: Plain
        start_bit: 28
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: PARKING_BRAKE_ON
        multiplexer_indicator: Plain
        start_bit: 29
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - EON
value_descriptions:
  - Signal:
      message_id:
        Standard: 662
      name: CRUISE_BUTTONS
      value_descriptions:
        - id: 7
          description: tbd
        - id: 6
          description: tbd
        - id: 5
          description: tbd
        - id: 4
          description: accel_res
        - id: 3
          description: decel_set
        - id: 2
          description: cancel
        - id: 1
          description: main
        - id: 0
          description: none
  - Signal:
      message_id:
        Standard: 662
      name: CRUISE_SETTING
      value_descriptions:
        - id: 3
          description: distance_adj
        - id: 2
          description: tbd
        - id: 1
          description: lkas_button
        - id: 0
          description: none
  - Signal:
      message_id:
        Standard: 806
      name: CMBS_BUTTON
      value_descriptions:
        - id: 3
          description: pressed
        - id: 0
          description: released
