tests/snapshots/opendbc/generator/honda/_steering_sensors_a.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 330
    name: STEERING_SENSORS
    size: 8
    transmitter:
      NodeName: EPS
    signals:
      - name: STEER_ANGLE
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: -0.1
        offset: 0
        min: -500
        max: 500
        unit: deg
        receivers:
          - EON
      - name: STEER_ANGLE_RATE
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: -1
        offset: 0
        min: -3000
        max: 3000
        unit: deg/s
        receivers:
          - EON
      - name: STEER_SENSOR_STATUS_1
        multiplexer_indicator: Plain
        start_bit: 34
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: STEER_SENSOR_STATUS_2
        multiplexer_indicator: Plain
        start_bit: 33
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: STEER_SENSOR_STATUS_3
        multiplexer_indicator: Plain
        start_bit: 32
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: STEER_WHEEL_ANGLE
        multiplexer_indicator: Plain
        start_bit: 47
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: -0.1
        offset: 0
        min: -500
        max: 500
        unit: deg
        receivers:
          - EON
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - EON
