tests/snapshots/opendbc/generator/honda/_steering_sensors_b.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 342
    name: STEERING_SENSORS
    size: 6
    transmitter:
      NodeName: EPS
    signals:
      - name: STEER_ANGLE
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: -0.1
        offset: 0
        min: -500
        max: 500
        unit: deg
        receivers:
          - EON
      - name: STEER_ANGLE_RATE
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: -1
        offset: 0
        min: -3000
        max: 3000
        unit: deg/s
        receivers:
          - EON
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 45
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 43
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - EON
